--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -18,8 +18,7 @@ build:
     - cd ..
   artifacts:
     paths:
-      - build/ABSimRun
-      - build/tests/Test
+      - build/*
 
 test:
   stage: test
