--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,6 +9,8 @@ option(BUILD_TESTS "Build test programs" OFF)
 #--- Device target architecture
 set(TARGET_BACKEND CPU CACHE STRING "Target architecture of the device")
 set_property(CACHE TARGET_BACKEND PROPERTY STRINGS CPU THREADS OPENMP GPU)
+# Add compile definition for target
+add_compile_definitions(TARGET_BACKEND_${TARGET_BACKEND})
 
 #--- CMake build type.
 set(CMAKE_BUILD_TYPE RelWithDebInfo CACHE STRING "Build type")
@@ -16,12 +18,14 @@ set_property(CACHE CMAKE_BUILD_TYPE PROPERTY STRINGS RelWithDebInfo Release Debu
 
 
 #--- Compiler flag options.
-if (CMAKE_BUILD_TYPE STREQUAL "DEBUG")
+if (CMAKE_BUILD_TYPE STREQUAL "Debug")
     set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -Werror -Wpedantic -g")
+    add_compile_definitions(Debug)
 endif()
 
 if (CMAKE_BUILD_TYPE STREQUAL "RelWithDebInfo")
     set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -Werror -Wpedantic -g -O3 -march=native")
+    add_compile_definitions(RelWithDebInfo)
 endif()
 
 if (CMAKE_BUILD_TYPE STREQUAL "Release")
