--- a/backend/CMakeLists.txt
+++ b/backend/CMakeLists.txt
@@ -4,7 +4,7 @@ if (TARGET_BACKEND STREQUAL "CPU")
     add_library(Backend STATIC ${backend_sources})
 elseif (TARGET_BACKEND STREQUAL "THREADS")
     find_package(Threads)
-    if (Threads_Found)
+    if (Threads_FOUND)
         include_directories(cputhreads)
         file(GLOB backend_sources "cputhreads/*cpp")
         add_library(Backend STATIC ${backend_sources} ${CMAKE_THREAD_LIBS_INIT})
@@ -23,11 +23,12 @@ elseif (TARGET_BACKEND STREQUAL "OPENMP")
     else()
     message(STATUS "OpenMP not found for CXX, trying with Threads instead.")
         find_package(Threads)
-        if (Threads_Found)
+        if (Threads_FOUND)
             include_directories(cputhreads)
             file(GLOB backend_sources "cputhreads/*cpp")
             add_library(Backend STATIC ${backend_sources} ${CMAKE_THREAD_LIBS_INIT})
         else()
+            message(STATUS "Threads not found, building for CPU instead")
             include_directories(cpu)
             file(GLOB backend_sources "cpu/*cpp")
             add_library(Backend STATIC ${backend_sources})
