--- a/backend/CMakeLists.txt
+++ b/backend/CMakeLists.txt
@@ -19,7 +19,8 @@ elseif (TARGET_BACKEND STREQUAL "OPENMP")
     if (OpenMP_CXX_FOUND)
         include_directories(openmp)
         file(GLOB backend_sources "openmp/*cpp")
-        add_library(Backend STATIC ${backend_sources} OpenMP::OpenMP_CXX)
+        add_library(Backend STATIC ${backend_sources})
+        target_link_libraries(Backend OpenMP::OpenMP_CXX)
     else()
     message(STATUS "OpenMP not found for CXX, trying with Threads instead.")
         find_package(Threads)
