--- a/backend/CMakeLists.txt
+++ b/backend/CMakeLists.txt
@@ -7,6 +7,7 @@ elseif (TARGET_BACKEND STREQUAL "THREADS")
     if (Threads_FOUND)
         include_directories(cputhreads)
         file(GLOB backend_sources "cputhreads/*cpp")
+        set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fPIC")
         add_library(Backend STATIC ${backend_sources} ${CMAKE_THREAD_LIBS_INIT})
     else()
     message(STATUS "Threads not found, building for CPU instead")
@@ -27,6 +28,7 @@ elseif (TARGET_BACKEND STREQUAL "OPENMP")
         if (Threads_FOUND)
             include_directories(cputhreads)
             file(GLOB backend_sources "cputhreads/*cpp")
+            set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fPIC")
             add_library(Backend STATIC ${backend_sources} ${CMAKE_THREAD_LIBS_INIT})
         else()
             message(STATUS "Threads not found, building for CPU instead")
