--- a/common/CMakeLists.txt
+++ b/common/CMakeLists.txt
@@ -1,4 +1,4 @@
 #--- Build Common library
-include_directories(include)
 file(GLOB common_sources "src/*cpp")
 add_library(Common STATIC ${common_sources})
+target_include_directories(Common PUBLIC include)
