--- a/tupling/CMakeLists.txt
+++ b/tupling/CMakeLists.txt
@@ -7,5 +7,5 @@ include_directories(${ROOT_INCLUDE_DIRS})
 #--- Build Tupling library
 file(GLOB tupling_sources "src/*cpp")
 add_library(Tupling STATIC ${tupling_sources})
-target_include_directories(Tupling PUBLIC include ${CMAKE_SOURCE_DIR}/common/include ${CMAKE_SOURCE_DIR}/eventmodel/include)
+target_include_directories(Tupling PUBLIC include ${ABSIM_BASE}/common/include ${ABSIM_BASE}/eventmodel/include)
 target_link_libraries(Tupling ${ROOT_LIBRARIES})
