--- a/backend/CMakeLists.txt
+++ b/backend/CMakeLists.txt
@@ -42,4 +42,4 @@ elseif(TARGET_BACKEND STREQUAL "GPU")
     file(GLOB backend_sources "gpu/*cpp")
     add_library(Backend STATIC ${backend_sources})
 endif()
-target_include_directories(Backend PUBLIC ${CMAKE_SOURCE_DIR}/common/include)
+target_include_directories(Backend PUBLIC ${ABSIM_BASE}/common/include)
