--- a/tupling/CMakeLists.txt
+++ b/tupling/CMakeLists.txt
@@ -4,8 +4,16 @@ find_package(ROOT REQUIRED COMPONENTS Core Tree)
 include(${ROOT_USE_FILE})
 include_directories(${ROOT_INCLUDE_DIRS})
 
-#--- Build Tupling library
 file(GLOB tupling_sources "src/*cpp")
-add_library(Tupling STATIC ${tupling_sources})
+file(GLOB tupling_headers "include/*h")
+
+include_directories(include ${ABSIM_BASE}/common/include ${ABSIM_BASE}/eventmodel/include)
+
+#--- Generate library
+ROOT_GENERATE_DICTIONARY(G__Tupling ${tupling_headers} LINKDEF TuplingLinkDef.h)
+
+#--- Build Tupling library
+add_library(Tupling STATIC ${SOURCES} ${} G__Tupling.cxx)
+#add_library(Tupling STATIC ${tupling_sources})
 target_include_directories(Tupling PUBLIC include ${ABSIM_BASE}/common/include ${ABSIM_BASE}/eventmodel/include)
 target_link_libraries(Tupling ${ROOT_LIBRARIES})
